fix(styles): remove redundant selector for scrollbar visibility in CSS

--- a/src/globals/styles/index.css
+++ b/src/globals/styles/index.css
@@ -140,6 +140,6 @@ button {
 }
 
 /* Clase para ocultar la barra de navegación */
-html::-webkit-scrollbar {
+::-webkit-scrollbar {
   display: none;
 }
